Fix height, scroll overflow

--- a/css/elements.css
+++ b/css/elements.css
@@ -2,7 +2,8 @@
 	font-family: courier, monospace;
     color: #fff;
     max-width: 750px;
-	min-height: 700px;
+    min-height: 700px;
+    max-height: 700px;
 	margin-left: 1vw;
 	margin-right: 1vw;
 	margin-top: 3vh;
@@ -10,6 +11,7 @@
     font-size: 14px;
     padding-left: 2vw;
     padding-right: 1vw;
+    overflow: scroll;
 }
 
 #console::after {
